# ch-oxidase

./: .gitignore  Cargo.toml  README.md
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/x86_64/: gdt.rs  mod.rs  regs.rs
devices/: Cargo.toml
qcow/: Cargo.toml
qcow/src/: qcow.rs
src/: main.rs
vm-allocator/: Cargo.toml
vm-device/: Cargo.toml
vm-virtio/: Cargo.toml
vm-virtio/src/: block.rs  lib.rs
vmm/: Cargo.toml
vmm/src/: config.rs  cpu.rs  device_manager.rs  device_tree.rs  interrupt.rs  lib.rs  memory_manager.rs  vm.rs
vmm/src/api/: http.rs  http_endpoint.rs  mod.rs
vmm/src/api/openapi/: cloud-hypervisor.yaml
