[package]
name = "ch-oxidase"
version = "0.0.1"
authors = ["Allison Randal <allison@oxide.computer>"]
edition = "2018"

[dependencies]
clap = "~2.33"
epoll = "4.1.0"
libc = "0.2.71"
log = { version = "0.4.8", features = ["std"] }
serde_json = ">=1.0.9"
bhyve-api = { path = "../bhyve-api" }
vm-memory = { version = "0.2.0", features = ["backend-mmap"] }
vmm = { path = "vmm" }
vmm-sys-util = { version = ">=0.5.0", features = ["with-serde"] }

[dev-dependencies]
credibility = "0.1.3"

[patch.crates-io]
vmm-sys-util = { path = "../../rust-vmm/vmm-sys-util" }
libc = { path = '../../rust-lang/libc' }

[patch.'https://github.com/rust-vmm/vmm-sys-util']
vmm-sys-util = { path = "../../rust-vmm/vmm-sys-util" }
