[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[features]
default = []

[dependencies]
byteorder = "1.3.4"
libc = "0.2.69"
vm-memory = { version = "0.2.0", features = ["backend-mmap"] }
bhyve-api = { path = "../../bhyve-api" }

acpi_tables = { path = "../../bhyve-oxidase/acpi_tables", optional = true }
arch_gen = { path = "../arch_gen" }

[dependencies.linux-loader]
git = "https://github.com/rust-vmm/linux-loader"
features = ["elf", "bzimage"]

[dev-dependencies]
rand = "0.7.3"
