[package]
name = "qcow"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
path = "src/qcow.rs"

[dependencies]
byteorder = "1.3.4"
libc = "0.2.69"
log = "0.4.8"
remain = "0.2.1"
vmm-sys-util = ">=0.3.1"
vm-virtio = { path = "../../bhyve-oxidase/vm-virtio" }

[dev-dependencies]
tempfile = "3.1.0"

[patch.crates-io]
vmm-sys-util = { path = "../../../rust-vmm/vmm-sys-util" }
libc = { path = '../../../rust-lang/libc' }

[patch.'https://github.com/rust-vmm/vmm-sys-util']
vmm-sys-util = { path = "../../../rust-vmm/vmm-sys-util" }
