[package]
name = "vmm"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"

[features]
default = []
acpi = ["acpi_tables","devices/acpi"]
pci_support = ["pci", "vm-virtio/pci_support"]
mmio_support = ["vm-virtio/mmio_support"]
cmos = ["devices/cmos"]
fwdebug = ["devices/fwdebug"]

[dependencies]
bhyve-api = { git = "https://github.com/oxidecomputer/bhyve-api" }
arc-swap = ">=0.4.4"
clap = "2.33.0"
acpi_tables = { path = "../acpi_tables", optional = true }
anyhow = "1.0"
arch = { path = "../arch" }
devices = { path = "../devices" }
epoll = ">=4.0.1"
lazy_static = "1.4.0"
libc = "0.2.74"
log = "0.4.8"
micro_http = { git = "https://github.com/firecracker-microvm/micro-http", branch = "master" }
pci = {path = "../pci", optional = true}
qcow = { path = "../qcow" }
serde = {version = ">=1.0.27", features = ["rc"] }
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
url = "2.1.1"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { version = "0.2.0", features = ["backend-mmap", "backend-atomic"] }
vm-migration = { path = "../vm-migration" }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = { git = "https://github.com/oxidecomputer/vmm-sys-util", branch = "add-illumos-target", features = ["with-serde"] }
signal-hook = "0.1.14"
tempfile = "3.1.0"

[dependencies.linux-loader]
git = "https://github.com/rust-vmm/linux-loader"
features = ["elf", "bzimage", "pe"]

[dev-dependencies]
credibility = "0.1.3"
